fixed date spacing

--- a/style.scss
+++ b/style.scss
@@ -116,6 +116,7 @@ img {
 }
 
 .date {
+  margin-top: 1.5em;
   font-style: italic;
   color: $gray;
 }
